# AI-First

./: .coverage  .gitignore  .markdownlintignore  ARCHITECTURE.md  CAPABILITY_INGRESS_DEPLOYMENT.md  CHATBOX_MCP_CONFIG.md  CHATBOX_MCP_CONFIG_UPDATED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_AUTOFORGE_GUIDE.md  DEEPSEEK_QUICKSTART.md  DEEPSEEK_SETUP.md  DEPLOYMENT_SUMMARY.md  GENERATE_GITHUB_CAPABILITY.md  GOVERNANCE_DEPLOYMENT.md  GOVERNANCE_PLATFORM_API_DEPLOYMENT.md  GOVERNANCE_PLATFORM_V1_V2_DEPLOYMENT.md  GOVERNANCE_V3_DEPLOYMENT.md  INSTALL.md  LAUNCH_READINESS_REPORT.md  LICENSE  OPEN_SOURCE_LAUNCH_CHECKLIST.md  PROCESS_MANAGEMENT.md  QUICKSTART.md  QUICKSTART_AUTOFORGE.md  QUICKSTART_DEEPSEEK.md  QUICKSTART_EXTERNAL_INTEGRATION.md  QUICKSTART_GOVERNANCE_V3.md  QUICK_REFERENCE.md  README.md  README_AUTOFORGE.md  RELEASE_NOTES_v3.0.0-alpha.1.md  RELEASE_v0.2.0.md  RELEASE_v2.0.1.md  SECURITY.md  USING_DEEPSEEK.md  V3.1_GOVERNANCE_COMPLETE.md  WEEK1_REPORT.md  WEEK2_PHASE1-3_REPORT.md  airun_cli.py  (+31 more)
.github/: pull_request_template.md
demo-calculator/: README.md  calculator.py  test_calculator.py
demo_assets/: AI_VIDEO_TOOL_RECOMMENDATION.md  buggy_api.py  video_script.md
docs/: AEGIS_AUTOFORGE_CALL_STRATEGY.md  AEGIS_AWE_INTEGRATION_RESPONSE.md  AEGIS_DEMO_RUNBOOK.md  AEGIS_GOVERNANCE_HOOKS_CONTRACT.md  AEGIS_WORKFLOW_EXECUTION_HISTORY_CONTRACT.md  AEGIS_X_AI_FIRST_COLLAB_SUBMISSION.md  AI_FIRST_ARCHITECTURE_EXPLAINED.md  AI_FIRST_USAGE_REPORT.md  AUDIT_DB_SCHEMA.md  AUDIT_REPORT_PREVIEW.md  AUTOFORGE_OPTIMIZATIONS.md  AUTOFORGE_OPTIMIZATION_SUMMARY.md  AUTOFORGE_PROMPTS_LIBRARY.md  AUTOFORGE_USER_GUIDE.md  AUTOFORGE_UX_DESIGN.md  AUTO_CAPABILITY_CREATION_SYSTEM.md  CAPABILITY_INGRESS.md  CAPABILITY_REVIEW_AND_INTEGRATION.md  CHATBOX_MCP_AI_FIRST.md  COMPATIBILITY_CONTRACT.md  COMPONENT_ARTIFACT_SPEC.md  CURSOR_MCP_AI_FIRST.md  ENTERPRISE_AUDIT.md  EXTERNAL_CAPABILITY_INTEGRATION.md  FINANCIAL_REPORT_CAPABILITY_STATUS.md  GOVERNANCE_CONSOLE.md  GOVERNANCE_CONSTITUTION.md  GOVERNANCE_PLATFORM_API.md  GOVERNANCE_PLATFORM_V1_V2.md  GOVERNANCE_V3_COMPLETE.md  HANDLER_DEVELOPER_GUIDE.md  INTEGRATION_GUIDE.md  INTERNAL_PYPI_DISTRIBUTION_SOP.md  LOCAL_FOLDER_SYNC_GUIDE.md  NATIVE_CODER_DEMO_DESIGN.md  NATIVE_CODER_DEMO_LOG.md  OPEN_SOURCE_STRATEGY.md  PLAINTEXT_ASSETS_MODE_GUIDE.md  PROJECT_INTEGRATION_TEMPLATE.md  PROJECT_RELATIONSHIP.md  (+15 more)
examples/: autoforge_examples.sh  generated_github_capability_example.yaml  generated_github_handler_example.py  import_claude_skill_example.sh  import_http_api_example.sh  (+4 more)
(+240 files in other folders)
